tests/sksl/errors/ReservedNameSampler2DRectShadow.glsl
### Compilation failed:

error: 1: name 'sampler2DRectShadow' is reserved
int sampler2DRectShadow;
    ^^^^^^^^^^^^^^^^^^^
1 error
